@@ -1,26 +1,0 @@
-# Plain Text Mode Test, chapter 1
-#
-# DO NOT EDIT THIS FILE - EDIT EXAMPLES IN THE SOURCE INSTEAD!
-#
-# This file has been generated by AutoDoc. It contains examples extracted from
-# the package documentation. Each example is preceded by a comment which gives
-# the name of a GAPDoc XML file and a line range from which the example were
-# taken. Note that the XML file in turn may have been generated by AutoDoc
-# from some other input.
-#
-gap> START_TEST( "plain_text_mode_test01.tst");
-
-# _Chapter_Test.xml:8-13
-gap> S5 := SymmetricGroup(5);
-Sym( [ 1 .. 5 ] )
-gap> Size(S5);
-120
-
-# _Chapter_Test.xml:17-22
-gap> A5 := AlternatingGroup(5);
-Alt( [ 1 .. 5 ] )
-gap> Size(A5);
-60
-
-#
-gap> STOP_TEST("plain_text_mode_test01.tst", 1 );
