@@ -3,6 +3,8 @@ This file describes changes in the AutoDoc package.
 XXX
   - Deprecate @BeginAutoDoc and @EndAutoDoc; they will be removed in a future
     AutoDoc version
+  - Deprecate @BeginAutoDocPlainText and @EndAutoDocPlainText; they will be
+    removed in a future AutoDoc version
 
 2019.07.24
   - Add support for ISO 8601 dates in package metadata (to prepare for GAP adding
